--- a/style3.css
+++ b/style3.css
@@ -256,14 +256,14 @@ outline: none;
 border: none;
 font-size: 200%;
 }
-/* 
+
 .start-game{
 border: none;
 transition: all 0.3s ease;
 overflow: hidden;
 }
 
-.start-game:after { 
+/* .start-game:after { 
     position: absolute; 
     content: " "; 
     z-index: -1; 
@@ -272,8 +272,8 @@ overflow: hidden;
     width: 100%; 
     height: 100%; 
      background-color: #1fd1f9; 
-  /* background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);  */
-  /* background-image: url("./start1.png");
+  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%); 
+  background-image: url("./start1.png");
     transition: all 0.3s ease; 
   }  */
   .start-game:hover { 
@@ -291,7 +291,7 @@ overflow: hidden;
                 -4px -4px 6px 0 rgba(116, 125, 136, .2),  
       inset -4px -4px 6px 0 rgba(255,255,255,.5), 
       inset 4px 4px 6px 0 rgba(116, 125, 136, .3); 
-  }  */
+  } 
 
 
 .hidden{
